2003-09-22  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Doc-comment and
	cosmetic improvements.

2003-09-18  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/Vrml97Parser.cpp:  Track changes to
	Vrml97Parser.g.
	* src/libopenvrml/openvrml/Vrml97Parser.g:  Throw an
	antlr::SemanticException when scope::add_type fails.
	* src/libopenvrml/openvrml/scope.cpp:  Changed scope::find_type
	and scope::first_type to return "const node_type_ptr &" instead
	of "const node_type_ptr".  Changed scope::add_type to return
	a boolean value to indicate success or failure.

2003-09-18  Braden McDaniel  <braden@endoframe.com>

	Changed node::id to return "const std::string &" instead of
	"const std::string".

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2003-09-18  Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-09-18  Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header:  Style sheet enhancements.

2003-09-17  Braden McDaniel  <braden@endoframe.com>

	* README:  Added section "Significant preprocessor symbols".

2003-09-13  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Apparently we really do need Automake 1.7.

2003-09-12  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp (node::node):  Reordered
	member initializer list to match declaration order.
	* src/libopenvrml/openvrml/rendering_context.cpp
	(rendering_context::rendering_context):  Reordered member
	initializer list to match declaration order.

2003-09-09  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp (script_node::update):
	Moved check for modified eventOuts outside of conditional
	testing whether an event had been received; per patch from
	Steffen Mader <s_mader@users.sourceforge.net>.
